Fixed the problem with alignment of the "Step 4" box.

--- a/itjava/WebContent/css/tutorialSelection.css
+++ b/itjava/WebContent/css/tutorialSelection.css
@@ -126,6 +126,7 @@ tr .passive:hover {
 
 #tdHintCell {
 	font-family: segoe ui, verdana;
+	vertical-align:top;
 }
 
 .divInvisibleHint {
